--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.ac.rma.hpc</groupId>
+    <groupId>org.keycloak.storage.ldap.mappers.membership.group</groupId>
     <artifactId>ldap-posixaccount</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
